# TwoFilesJsonToWebView

./: CMakeLists.txt
src/: main.cpp
src/simul-assets/: simul.html
